SystemUI: Introduce Data Switch QS Tile
* Based on OnePlus' OxygenOS tile, reworked to work with AOSP toggling without requirements on proprietary telephony-ext features

idoybh (YAAP): Adapt to A12

[ghostrider-reborn]
- Set secondary label to SIM1 or SIM2 instead of just "On"

[Jyotiraditya Panda <jyotiraditya@aospa.co>]
- Code cleanup and improvements

[Andrew Fluck <andrew@aospa.co>]
- Update SIMs QS icons

Change-Id: Ie2e280c07f24f9da6b4ee218b72501a2713ce429
Co-authored-by: Andrew Fluck <andrew@aospa.co>
Signed-off-by: Hernán Castañón Álvarez <herna@paranoidandroid.co>
Signed-off-by: Adithya R <gh0strider.2k18.reborn@gmail.com>
Signed-off-by: Jyotiraditya Panda <jyotiraditya@aospa.co>

--- a/packages/SystemUI/AndroidManifest.xml
+++ b/packages/SystemUI/AndroidManifest.xml
@@ -341,6 +341,9 @@
     <protected-broadcast android:name="com.google.android.systemui.smartspace.ENABLE_UPDATE"/>
     <protected-broadcast android:name="com.google.android.systemui.smartspace.EXPIRE_EVENT"/>
 
+    <!-- DataSwitch tile -->
+    <uses-permission android:name="android.permission.WRITE_APN_SETTINGS" />
+
     <application
         android:name=".SystemUIApplication"
         android:persistent="true"
